--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grunt-auto-spacing",
-  "description": "A grunt task which adds CSS classes for paragraphs with leading quotes in HTML",
+  "description": "A grunt task which adds spaces between Chinese characters and English words",
   "version": "0.0.1",
   "homepage": "https://github.com/sparanoid/grunt-auto-spacing",
   "author": {
